# LLM-Bot_Social_Chat

./: .gitignore  README.md  check_environment.sh  pyproject.toml  run_checks.sh
.github/workflows/: ci.yml
.squad/: project.json
.squad/architect/: design_doc.md
configs/: base2.json  default.json  linux_sentinels.json
src/bot_social_network/: ai_client.py  analyzer.py  database.py  generate_voice.py  headless.py  logging_config.py  main.py  simulation.py  voice_manager.py
src/bot_social_network/templates/: report_template.html
tests/: conftest.py  test_ai_client.py  test_analyzer.py  test_database.py  test_main.py  test_simulation.py  test_voice_manager.py
